syntax = "proto3";

package ecliptix.proto.app_device;
option csharp_namespace = "Ecliptix.Protobuf.AppDevice";

message AppDevice {
  bytes app_instance_id = 1;
  bytes device_id = 2;

  enum DeviceType {
    MOBILE = 0;
    DESKTOP = 1;
  }

  DeviceType device_type = 3;
}

message AppDeviceRegisteredStateReply {
  enum Status {
    SUCCESS_NEW_REGISTRATION = 0;
    SUCCESS_ALREADY_EXISTS = 1;
    FAILURE_INVALID_REQUEST = 2;
    FAILURE_INTERNAL_ERROR = 3;
  }

  Status status = 1;
  bytes unique_id = 2;
  bytes server_public_key = 3;
}

message ApplicationInstanceSettings{
  bytes app_instance_id = 1;
  bytes device_id = 2;
  bytes server_public_key = 3;
  string system_device_identifier = 4;
  AppDevice.DeviceType device_type = 5;
}